tests/should-fail/semantics/uninit-globals-in-globals.j
globals
	integer a
	integer b = a + 3
endglobals
